# sabot

./: .gitignore  changes.md  go.mod  go.sum  license.md  pyproject.toml  readme.md  wishes.md
extra/: build.fish
sabot/: __init__.py  __main__.py  main.go
sabot/comms/: __init__.py  base.py  comm.go  comm_test.go  help.go  help_test.go  list.py  show.go  show.py  show_test.go
sabot/comms/comm/: comm.go  comm_test.go
sabot/items/: __init__.py  book.py  note.py  page.py
sabot/items/book/: book.go  book_test.go
sabot/items/note/: note.go  note_test.go
sabot/items/page/: page.go  page_test.go
sabot/tools/: __init__.py  clui.py  dbse.py
sabot/tools/bolt/: bolt.go  bolt_test.go
sabot/tools/clui/: clui.go  clui_test.go
sabot/tools/errs/: errs.go  errs_test.go
sabot/tools/neat/: neat.go  neat_test.go
sabot/tools/sqls/: sqls.go
sabot/tools/test/: test.go  test_test.go
tests/: conftest.py
tests/test_comms/: test_base.py  test_list.py  test_show.py
tests/test_items/: __init__.py  test_book.py  test_note.py  test_page.py
tests/test_tools/: test_clui.py  test_dbse.py  test_neat.py  test_sqls.py
