[project]
name = "sabot"
readme = "readme.md"
description = "A command-line note-taking database."
dependencies = ["click>=8.2.1"]
requires-python = ">=3.13"
license = {text = "BSD"}
authors = [{name = "Stephen Malone", email = "mail@example.com"}]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
test = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-mypy>=1.0.1",
]

[project.scripts]
sabot = "sabot.__main__:main"

[project.urls]
Github = "https://github.com/gesedels/sabot"
Issues = "https://github.com/gesedels/sabot/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.setuptools.dynamic]
version = {attr = "sabot.VERSION_NUMS"}

[tool.setuptools.packages.find]
where = ["."]
include = ["sabot*"]
